# AndroidPackageManager

./: .clangd  .deb-signature-verification-flow.md  .gitignore  AMS-Documentation.txt  AMSD_PLAN.md  APM-TermuxCompatibility.txt  APMModulesSystem-Documentation.txt  Android.bp  CMakeLists.txt  CODE_REVIEW_ISSUES_2026-03-15.txt  CommentsHowTo.txt  HYBRID_TRANSPORT_FIX.md  README.md  REBUILD_CHECKLIST.md  SECURITY_REVIEW.txt  SYSTEM_INSTALL.md  SystemWideImplementation-HowTo.txt  VERBOSE_DEBUG_IMPLEMENTATION_COMPLETE.md  VERBOSE_DEBUG_PATCH.md  apm-log.txt  apmd-dmesg-log.txt  apmd-log.txt  build_android.sh  compile_apm.sh  init.amsd.rc  init.apmd.rc  install_apm.sh
.github/agents/: apm-code-maintainer.agent.md
Examples/: InRelease  Packages  Release  Release.gpg
apm-flashable/: IMPLEMENTATION_CHECKLIST.md  README.md  build.prop  build_recovery_zip.sh
apm-flashable-new/: README.md  build_recovery_zip.sh
apm-flashable-new/system/addon.d/: addond_head
apm-flashable-new/system/etc/init/: init.amsd.rc  init.apmd.rc
apm-flashable-new/system/etc/selinux/: apm.cil  apm_file_contexts
apm-flashable-new/system/xbin/: lzmainfo  xzgrep  xzless
apm-flashable-uninstall/: build_uninstall_zip.sh
apm-flashable/sepolicy/: apm_data.te  apmd.te  file_contexts  service_contexts
apm-flashable/system/addon.d/: addond_head  addond_tail
apm-flashable/system/etc/init/: init.amsd.rc  init.apmd.rc
apm-flashable/system/etc/selinux/: apm.cil  apm_file_contexts  apm_service_contexts
apm-magisk/: module.prop  post-fs-data.sh  service.sh  uninstall.sh
apm-magisk/files/: xz  xzdiff  xzmore
apm-magisk/system/etc/init/: init.amsd.rc  init.apmd.rc
boringssl-tools/compile-for-all-abi/: README.md  build_all.sh
cmake/patches/: curl-mbedtls-rng.patch  mbedtls-disable-tls13.patch
docs/wiki/: AMS-Architecture.md  AMS-Module-Development.md  APM-Architecture.md  Build-and-Deployment.md  CLI-and-Operations.md  Home.md  Troubleshooting.md
prebuilt/boringssl/: jitter_deltas  test_fips
selinux-contexting/: apm.cil  apm_file_contexts  apm_property_contexts  apm_service_contexts
src/ams/: module_info.cpp  module_manager.cpp
src/ams/include/ams/: module_info.hpp  module_manager.hpp
src/amsd/: amsd.cpp  ipc_server.cpp  ipc_server.hpp  request_dispatcher.cpp  request_dispatcher.hpp  security_manager.cpp  security_manager.hpp
src/apm/: apm.cpp  binder_client.cpp  ipc_client.cpp  transport.cpp
src/apm/commands/: apk_install.cpp  info.cpp  list.cpp  search.cpp
src/apm/commands/include/: apk_install.hpp
src/apm/include/: binder_client.hpp  ipc_client.hpp  transport.hpp
src/apmd/: apk_installer.cpp  apmd.cpp  binder_service.cpp  binder_service.hpp  boringssl_client.cpp  export_path.cpp  factory_reset.cpp  install_manager.cpp  ipc_server.cpp  mbedtls_client.cpp  protocol.cpp  request_dispatcher.cpp  request_dispatcher.hpp  security_manager.cpp
src/apmd/include/: apk_installer.hpp  apmd.hpp  boringssl_client.hpp  export_path.hpp  factory_reset.hpp  install_manager.hpp  ipc_server.hpp  mbedtls_client.hpp  protocol.hpp  search.hpp  security_manager.hpp
src/core/: binder_support.cpp  config.cpp  control_parser.cpp  deb_extractor.cpp  dependency.cpp  downloader.cpp  logger.cpp  manual_package.cpp  release_parser.cpp  repo_index.cpp  security.cpp  status_db.cpp  tar_extractor.cpp
src/core/include/: binder_defs.hpp  binder_support.hpp  config.hpp  control_parser.hpp  deb_extractor.hpp  dependency.hpp  downloader.hpp  logger.hpp  manual_package.hpp  release_parser.hpp  repo_index.hpp  security.hpp  status_db.hpp  tar_extractor.hpp
src/selinux/: apm_policy.cpp  policy_parser.cpp  te_parser.cpp
src/selinux/include/: policy_parser.hpp  te_parser.hpp
src/util/: fs.cpp  process_lock.cpp
src/util/crypto/: gpg_verify.cpp  gpg_verify.hpp  md5.cpp  md5.hpp  sha256.cpp  sha256.hpp
src/util/include/: fs.hpp  process_lock.hpp
